06.06.2014 - Time: 15:25 (GMT+2) - Added tabindex=0 to quickbuttons sub menu - Added focus on quickbuttons sub menu (gives ability to tap open)(WIP) (! Known issue, currently sub menu items not working) - Fixed a non-closed place on new topic page - Less padding on small screens give more width to icons (WSYIWYG)

--- a/Themes/default/css/index.css
+++ b/Themes/default/css/index.css
@@ -2250,7 +2250,7 @@ ul.quickbuttons li.inline_mod_check {
 .quickbuttons li ul {
 	display: none;
 }
-.quickbuttons li:active ul {
+.quickbuttons li:hover ul {
 	display: block;
 	right: -1px;
 }
